Partially replace console.log with debug. Use https. Use adapter.js Secure socket io connection (not finished)

--- a/views/index.html
+++ b/views/index.html
@@ -10,6 +10,7 @@
 
     <div id="content"></div>
     <script src="js/bundle.js"></script>
+    <script src="js/adapter.js"></script>
 </body>
 
 </html>
