--- a/views/index.html
+++ b/views/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Data Streamer</title>
+    <link rel="stylesheet" href="stylesheets/semantic.min.css" type="text/css" />
 </head>
 
 <body>
