--- a/views/index.html
+++ b/views/index.html
@@ -11,7 +11,7 @@
 
     <div id="content"></div>
     <script src="js/bundle.js"></script>
-    <script src="js/adapter.js"></script>
+    <!-- <script src="js/adapter.js"></script> -->
 </body>
 
 </html>
