--- a/views/index.html
+++ b/views/index.html
@@ -10,8 +10,8 @@
 <body>
 
     <div id="content"></div>
+    <script src="js/adapter.js"></script>
     <script src="js/bundle.js"></script>
-    <!-- <script src="js/adapter.js"></script> -->
 </body>
 
 </html>
